Fixed scroll bug adding padding-top to ControlPages. Optimized Block_Pole code and changed block height to 620px on mobile. Modified swiper

--- a/siteliste/src/WidgetsAndElements/Styles/Poles.css
+++ b/siteliste/src/WidgetsAndElements/Styles/Poles.css
@@ -40,7 +40,7 @@
 .mobile-swiper {
   width: 90%;
   box-sizing: border-box;
-  padding-top: 20px;
+  padding: 40px 0px;
   margin: 0 auto;
 }
 
